# floodops-multi-agent-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  flood_agent_specs.jsx  flood_multiagent_orchestration.html  floodops-intro.html  global_flood_prediction_nature_2024.md  implementation_plan.md  implementation_plan1.md
.github/workflows/: ci.yml  docker.yml
backend/: Dockerfile  pyproject.toml  requirements-geo.txt  requirements-ml.txt  requirements.txt
backend/floodops/: __init__.py  config.py  main.py
backend/floodops/agents/: __init__.py  alert.py  base.py  compound.py  disease.py  glof.py  predict.py  resource.py  sentinel.py  urban.py
backend/floodops/api/: __init__.py  app.py  routes_auth.py  routes_ensemble.py  routes_flood.py  routes_map.py  routes_scenario.py  routes_timeline.py  routes_v4.py  websocket.py
backend/floodops/auth/: __init__.py  oauth.py  workspace.py
backend/floodops/connectors/: __init__.py  base.py  dartmouth.py  ecmwf.py  gdacs.py  glims.py  googleflood.py  hydrosheds.py  noaa.py  openmeteo.py  osm.py  reliefweb.py  sentinel_hub.py  soil_moisture.py  usgs.py  worldpop.py
backend/floodops/hydrology/: __init__.py  calibration.py  climatology.py  return_periods.py  runoff.py
backend/floodops/llm/: __init__.py  client.py  memory.py  prompts.py  providers.py  reasoning.py
backend/floodops/models/: __init__.py  alert.py  cap.py  causal.py  compound.py  disease.py  enums.py  geo.py  glof.py  memory.py  orchestrator.py  predict.py  reasoning.py  resource.py  scenario.py  sentinel.py  state.py  urban.py
backend/floodops/obs/: __init__.py  logging.py  store.py  verification.py
backend/floodops/orchestrator/: __init__.py  graph.py  nodes.py  routing.py  service.py
backend/floodops/queue/: __init__.py  event_bus.py
backend/scripts/: google_oauth_login.py
backend/tests/: conftest.py  test_event_bus.py  test_hydrology.py  test_memory_causal.py  test_orchestrator.py  test_reasoning_core.py  test_v4.py  test_v5.py
backend/tests/agents/: test_agents.py
docs/: paper-alignment.md
frontend/: .prettierrc.json  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: auth.js  main.js  mockData.js  state.js  style.css  toast.js  websocket.js
frontend/src/__tests__/: panels.test.js  skill-panel.test.js  state.test.js  websocket.test.js
frontend/src/ensemble/: disagreement.js  member-selector.js  probability-fan.js  spaghetti.js
frontend/src/map/: init.js  interactions.js  layers.js  terrain.js
frontend/src/panels/: activity-stream.js  area-search.js  chat.js  compound-panel.js  layer-panel.js  phase-bar.js  sitrep.js  skill-panel.js
frontend/src/scenarios/: scenario-panel.js
frontend/src/timeline/: animator.js  (+2 more)
