[project]
name = "floodops"
version = "0.1.0"
description = "FloodOps: Multi-agent flood orchestration system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "dataretrieval>=1.0.0",
    "xarray>=2024.0.0",
    "geopandas>=1.0.0",
    "osmnx>=2.0.0",
    "shapely>=2.0.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["tests/__pycache__"]

[tool.ruff.lint]
# Conservative rule set: pyflakes (F), pycodestyle (E/W), isort (I), bugbear (B),
# pyupgrade (UP). Keep noise low so the gate is meaningful, not annoying.
select = ["F", "E", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line length handled by formatter, not enforced hard
    "B008",   # FastAPI dependency-injection defaults use callables in args
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # optional/untyped deps (langgraph, google, etc.)
warn_unused_ignores = false
check_untyped_defs = false
# Optional heavy ML deps are absent in the lean env — never fail lint on them.
[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "torch.*"]
ignore_missing_imports = true

[tool.bandit]
# Security gate scans the package; tests are excluded.
exclude_dirs = ["tests"]
